okf/products/scalardl/3.12/releases/release-notes.md
---
type: Concept
title: ScalarDL 3.12 Release Notes
description: This page includes a list of release notes for ScalarDL 3.12.
resource: https://scalardl.scalar-labs.com/docs/3.12/releases/release-notes/
tags:
- scalardl
- v3.12
- phase:design
- section:about-scalardl
- edition:community
- edition:enterprise
status: stable
product: scalardl
product_title: ScalarDL
version: '3.12'
patch_version: 3.12.3
doc_id: releases/release-notes
lifecycle_phase: design
breadcrumb:
- About ScalarDL
editions:
- Community
- Enterprise
generated:
  by: process:okf-build/1.0.0
  at: '2026-08-24T00:15:44Z'
sources:
- id: docs-scalardl
  resource: https://github.com/scalar-labs/docs-scalardl/blob/db1535c35d0f746c5b5d8d9772f54afa0c709a34/versioned_docs/version-3.12/releases/release-notes.mdx
  title: ScalarDL documentation source (MDX)
  author: process:scalar-labs/docs-scalardl
  last_modified: '2026-08-20T15:35:18Z'
---

# ScalarDL 3.12 Release Notes

This page includes a list of release notes for ScalarDL 3.12.

## v3.12.3

**Release date:** March 26, 2026

### Summary

This release includes several bug fixes and vulnerability fixes.

### Community and Enterprise editions

#### Bug fixes

- Fixed the parameter name for the client entity ID. ([#376](https://github.com/scalar-labs/scalardl/pull/376))
- Fixed a bug where users cannot register a custom ValidateLedger contract after bootstrapping. ([#404](https://github.com/scalar-labs/scalardl/pull/404))
- Fixed [CVE-2025-61726](https://github.com/advisories/GHSA-gm9r-q53w-2gh4 "CVE-2025-61726"), [CVE-2025-61728](https://github.com/advisories/GHSA-g9q4-qjx4-2v7q "CVE-2025-61728"), [CVE-2025-61729](https://github.com/advisories/GHSA-7c64-f9jr-v9h2 "CVE-2025-61729") and [CVE-2025-68121](https://github.com/advisories/GHSA-h355-32pf-p2xm "CVE-2025-68121"). ([#472](https://github.com/scalar-labs/scalardl/pull/472))

### Enterprise edition

#### Bug fixes

- Fixed Gateway exception handling.
- Fixed a SLF4J version conflict in BYOL Docker images.

## v3.12.2

**Release date:** December 26, 2025

### Summary

This release includes several bug fixes and vulnerability fixes.

### Community and Enterprise editions

#### Bug fixes

- Fixed bugs to handle FLOAT and BLOB data types in the PutToMutable function. ([#297](https://github.com/scalar-labs/scalardl/pull/297))
- Fixed NullPointerException when a client is misconfigured with a digital signature. ([#302](https://github.com/scalar-labs/scalardl/pull/302))
- Fixed status code handling. ([#323](https://github.com/scalar-labs/scalardl/pull/323))
- Fixed [CVE-2025-47907](https://github.com/advisories/GHSA-j5pm-7495-qmr3 "CVE-2025-47907") and [CVE-2025-58183](https://github.com/advisories/GHSA-9gcr-gp5f-jw27 "CVE-2025-58183"). ([#364](https://github.com/scalar-labs/scalardl/pull/364))
- Fixed [CVE-2025-55163](https://github.com/advisories/GHSA-prj3-ccx8-p6x4 "CVE-2025-55163"). ([#365](https://github.com/scalar-labs/scalardl/pull/365))

## v3.12.1

**Release date:** October 8, 2025

### Summary

This release has several bug fixes.

### Community edition

#### Bug fixes

- Fixed JSON Schema Validator repository and version. ([#277](https://github.com/scalar-labs/scalardl/pull/277))

### Enterprise edition

#### Bug fixes

- Fixed duplicated read lock.

## v3.12.0

**Release date:** September 22, 2025

### Summary

This release introduces several enhancements, such as ScalarDL HashStore and TableStore, and includes several improvements and bug fixes. For detailed changes, see the following.

### Enhancements

- Added ScalarDL HashStore. ([#255](https://github.com/scalar-labs/scalardl/pull/255), [#256](https://github.com/scalar-labs/scalardl/pull/256), [#260](https://github.com/scalar-labs/scalardl/pull/260), [#261](https://github.com/scalar-labs/scalardl/pull/261))
- Added ScalarDL TableStore. ([#180](https://github.com/scalar-labs/scalardl/pull/180), [#192](https://github.com/scalar-labs/scalardl/pull/192), [#220](https://github.com/scalar-labs/scalardl/pull/220), [#221](https://github.com/scalar-labs/scalardl/pull/221), [#239](https://github.com/scalar-labs/scalardl/pull/239), [#246](https://github.com/scalar-labs/scalardl/pull/246), [#260](https://github.com/scalar-labs/scalardl/pull/260), [#261](https://github.com/scalar-labs/scalardl/pull/261))

### Improvements

- Supported time-related data types in the generic function. ([#200](https://github.com/scalar-labs/scalardl/pull/200))
- Bundled the ValidateLedger contract into the client. ([#254](https://github.com/scalar-labs/scalardl/pull/254), [#260](https://github.com/scalar-labs/scalardl/pull/260))
- Disabled the coordinator write omission in ScalarDB. ([#203](https://github.com/scalar-labs/scalardl/pull/203))

### Bug fixes

- Fixed the state management behavior for read-only transactions. ([#181](https://github.com/scalar-labs/scalardl/pull/181))
- Fixed certificate and secret key version check and messages. ([#202](https://github.com/scalar-labs/scalardl/pull/202))
- Fixed Ledger and Auditor configuration validations for correct authentication settings. ([#222](https://github.com/scalar-labs/scalardl/pull/222))
- Fixed `IS NULL` and `IS NOT NULL` conditions handling in table-oriented generic contracts. ([#238](https://github.com/scalar-labs/scalardl/pull/238))
- Fixed [CVE-2025-22874](https://github.com/advisories/GHSA-6f52-wpx2-hvf2 "CVE-2025-22874"). ([#262](https://github.com/scalar-labs/scalardl/pull/262))
